Update for 9-22 release

--- a/722.html
+++ b/722.html
@@ -16,95 +16,12 @@
 		<div class="vl2"></div>
 		<div class="vl3"></div>
 
-		<div class = "description">
+		<div class="description">
 			<p> 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			///////////////////////////////////////////////////////////////////////
-			///////////////////////////////////////////////////////////////////////
-			///////////////////////////////////////////////////////////////////////
-			///////////////////////////////////////////////////////////////////////
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
+			complimentary like 245s
 			</p>
 		</div>
-
+		
 		<figure>
 		<figcaption> Track 1: </figcaption>
 		<audio controls controlsList="nodownload noplaybackrate" 
