--- a/archive.html
+++ b/archive.html
@@ -6,13 +6,14 @@
 	</head>
 
 	<body>
-		<div class="title"><a href="index.html">Beat Tape 8-22</a></div>
+		<div class="title"><a href="index.html">Beat Tape 9-22</a></div>
 
 		<h1> <u>Archives:</u> </h1>
 
 		<div class="list"><a href="522.html">5-22   -------------------------------------</a></div>
 		<div class="list"><a href="622.html">6-22   -------------------------------------</a></div>
 		<div class="list"><a href="722.html">7-22   -------------------------------------</a></div>
+		<div class="list"><a href="822.html">8-22   -------------------------------------</a></div>
 
 		<div class="vl"></div>
 		<div class="vl2"></div>
@@ -21,89 +22,6 @@
 
 		<div class="description">
 			<p> 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			///////////////////////////////////////////////////////////////////////
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
 			complimentary like 245s
 			</p>
 		</div>
