--- a/index.html
+++ b/index.html
@@ -9,136 +9,47 @@
 		<div class="title"><a href="archive.html">Archives</a></div>
 
 		<h1> <u>Beat Tape:</u> </h1>
-		<h2>8-22</h2>
+		<h2>9-22</h2>
 
 
 		<div class="vl"></div>
 		<div class="vl2"></div>
 		<div class="vl3"></div>
 
-		<div class = "description">
+		<div class="description">
 			<p> 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			///////////////////////////////////////////////////////////////////////
-			///////////////////////////////////////////////////////////////////////
-			///////////////////////////////////////////////////////////////////////
-			///////////////////////////////////////////////////////////////////////
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
+			complimentary like 245s
 			</p>
 		</div>
-
+		
 		<figure>
 		<figcaption> Track 1: </figcaption>
 		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/822/822-T1.wav"> </audio>
+			src = "audioSrc/922/922-T1-2.wav"> </audio>
 		</figure>
 
 		<figure>
 		<figcaption> Track 2: </figcaption>
 		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/822/822-T2.wav"> </audio>
+			src = "audioSrc/922/922-T3.wav"> </audio>
 		</figure>
 
 		<figure>
 		<figcaption> Track 3: </figcaption>
 		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/822/822-T3.wav"> </audio>
+			src = "audioSrc/922/922-T4-2.wav"> </audio>
 		</figure>
 
 		<figure>
 		<figcaption> Track 4: </figcaption>
 		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/822/822-T4.wav"> </audio>
+			src = "audioSrc/922/922-T5-4.wav"> </audio>
 		</figure>
 
 		<figure>
 		<figcaption> Track 5: </figcaption>
 		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/822/822-T5.wav"> </audio>
-		</figure>
-
-		<figure>
-		<figcaption> Track 6: </figcaption>
-		<audio controls controlsList="nodownload noplaybackrate" 
-			src = "audioSrc/822/822-T6.wav"> </audio>
+			src = "audioSrc/922/922-T6.wav"> </audio>
 		</figure>
 
 	</body>
