--- a/622.html
+++ b/622.html
@@ -16,92 +16,9 @@
 		<div class="vl2"></div>
 		<div class="vl3"></div>
 
-		<div class = "description">
+		<div class="description">
 			<p> 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			///////////////////////////////////////////////////////////////////////
-			///////////////////////////////////////////////////////////////////////
-			///////////////////////////////////////////////////////////////////////
-			///////////////////////////////////////////////////////////////////////
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
-			/////////////////////////////////////////////////////////////////////// 
+			complimentary like 245s
 			</p>
 		</div>
 
